--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,44 @@
     transform: rotate(360deg);
   }
 }
+.topbar{
+  width:100%;
+  height:50px;
+  background-color: #0d4dad;
+}
+button{
+  height:50px;
+  width:100px;
+  color:white;
+  font-size: large;
+  margin: 10px;
+  border-radius: 5px;
+  border: 1px solid white;
+  background-color: rgb(67 67 186);
+}
+
+.users{
+  height:200px;
+  width:400px;
+  border:1px solid black;
+  margin:3px;
+  text-align:left;
+  display:inline-block;
+  padding:2px;
+}
+
+.todos{
+  height:150px;
+  width:80%;
+  border:1px solid green;
+  text-align:left;
+  display: inline-block;
+  margin:3px;
+  padding: 2px;
+}
+.error{
+  border:1px solid black;
+  background-color: gray;
+  color:white;
+  width:100%;
+}
